# juce-plugin

./: .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  devshell.ps1
.github/workflows/: juce.yml  plugin.yml  release-ubuntu64.yml  release-win64.yml  test.yml
cmake/: asio.cmake
scripts/: PowerShell.ps1  Ubuntu.ps1  Windows.ps1  dev.ps1  ubuntu.ps1
scripts/ASIO/: ASIO.ps1  ASIO.psm1
scripts/PowerShellScripts/: PowerShellScripts.psm1  Windows.ps1
src/: PluginEditor.cpp
src/AudioPluginHost/Builds/VisualStudio2015/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
src/AudioPluginHost/Builds/VisualStudio2017/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
src/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
src/AudioPluginHost/Builds/VisualStudio2022/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
src/AudioPluginHost/Source/Plugins/: InternalPlugins.cpp
src/AudioPluginHost/Source/UI/: PluginWindow.h
